--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/@mempool/mempool.js"></script> 
 </head>
 <body>
-    <button id="sellButton">Sell</button>
+    <button id="sellButton">Search Ordinals </button>
 
     <!-- Sell Page Modal -->
     <div id="sellPage" class="modal">
@@ -28,8 +28,7 @@
                 <p>Inscription Number: <span id="inscriptionNumberDisplay"></span></p>
                 <p>Address: <span id="addressDisplay"></span></p>
 
-                <h3>Set Price and Fees</h3>
-                <input type="text" id="price" placeholder="Price in BTC">
+               
                 <div id="result"></div>
                 <form id="feeRateForm">
                     <textarea id="feeRate" rows="10" cols="50"></textarea>
